press enter to trigger search

--- a/template.html
+++ b/template.html
@@ -14,7 +14,7 @@
         padding: 0;
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       }
-      #highlight {
+      .highlight {
         background-color: rgba(255,64,7,.5);
       }
     </style>
